powermock sample